--- a/Ecommerce_Shop_NDNB/Ecommerce_Shop_NDNB.csproj
+++ b/Ecommerce_Shop_NDNB/Ecommerce_Shop_NDNB.csproj
@@ -16,6 +16,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="X.PagedList.Mvc.Core" Version="10.5.7" />
   </ItemGroup>
 
   <ItemGroup>
