update new years

--- a/Ecommerce_Shop_NDNB/Ecommerce_Shop_NDNB.csproj
+++ b/Ecommerce_Shop_NDNB/Ecommerce_Shop_NDNB.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="wwwroot\media\slider\" />
     <Folder Include="wwwroot\media\product\" />
   </ItemGroup>
 
